# chitta-mcp

./: .env.example  .gitignore  Cargo.toml  README.md
.handoffs/: 2026-04-27T15-42-38.md  2026-04-27T19-01-04.md
bench/: benchmarks-guide.md  retrieval-eval.py
bench/astrobench/: embedder.py  eval.py  find-unique-tokens.py  how-to-run.md  ingest.py  provision.sh  pyproject.toml
bench/results/pre-v0003-tests/beam-rrf-sweep/dense-fts-sparse/retrieval/: 100k.json
bench/results/pre-v0003-tests/beam-rrf-sweep/dense-fts/retrieval/: 100k.json
bench/results/pre-v0003-tests/beam-rrf-sweep/dense-only/retrieval/: 100k.json
bench/results/pre-v0003-tests/beam-rrf-sweep/dense-sparse/retrieval/: 100k.json
bench/results/pre-v0003-tests/beam-rrf-sweep/rrf-k120/retrieval/: 100k.json
bench/results/pre-v0003-tests/beam-rrf-sweep/rrf-k20/retrieval/: 100k.json
bench/results/pre-v0003-tests/beam-rrf-sweep/rrf-k60/retrieval/: 100k.json
bench/results/pre-v0003-tests/lifebench-rrf-sweep/dense-fts-sparse/retrieval/: en.json
bench/results/pre-v0003-tests/lifebench-rrf-sweep/dense-fts/retrieval/: en.json
bench/results/pre-v0003-tests/lifebench-rrf-sweep/dense-only/: en.json
bench/results/pre-v0003-tests/lifebench-rrf-sweep/dense-sparse/retrieval/: en.json
bench/results/pre-v0003-tests/rrf-sweep-personamem/: results-overview.md
bench/runpod/: check-gpu-onnx.py  run-beam.sh  run-dedup-sweep.sh  run-personamem-sweep.sh  run-personamem.sh  run-retrieval-beam.sh  run-retrieval-lifebench.sh  run-retrieval-personamem.sh  run-retrieval-sweep.sh  run-v003-round1.sh  run-v003-round2.sh  runpod-guide.md  setup.sh  test-chunk-sizes.sh  test-ingest-batch.sh  test-ingest.sh
bench/runpod/archived/: run-v003-beam.sh  run-v003-round1.sh
docs/: astrobench-query-authoring.md  claude-presence-rewrite.md  contract-alignment.md  handoff.md  index.md  manas-architecture.md  pre-v0.0.3-roadmap.md  principles.md  starting-shape.md  todo.md
docs/archived/: principles-v002-agent-only.md  v0.0.2-roadmap.md
docs/official/v0.0.1/: configuration.md  index.md
docs/official/v0.0.2/: architecture.md  errors.md
docs/plans/: aion-share-refactor.md  astrology-benchmark-plan.md  collaborative-cognition.md  obsidian-ingestion-test.md
docs/plans/archived/: smriti-sketch.md
docs/post-v0.0.2-benchmark/: personamem-improvements.md
docs/research/: beam-improvements.md  innovation-potentials.md  master-plan.md  rahos-research.md  research-directions.md
docs/reviews/: claude-c06f3aafd0cfddeea064a856b4c2c21b47d93957-review.md  glm51-first-v003-review.md  kimik26-first-v003-review.md  kimik26-v0.0.1-review.md  kimik26-v0.0.2.md
docs/reviews/archived/: glm51-c06f3aafd0cfddeea064a856b4c2c21b47d93957-review.md  glm51-v0.0.0.2-review.md  v001-review-findings.md
docs/v0.0.1/: architecture.md  data-model.md  errors.md  getting-started.md  tool-reference.md
docs/v0.0.2/: configuration.md  data-model.md  getting-started.md  index.md  tool-reference.md
migrations/: 0001_init.sql  0002_query_log.sql  0003_add_source_metadata.sql  0004_fts_and_sparse.sql  0005_memory_type.sql  0006_query_log_memory_types.sql
migrations/manual/: 0004_migrate_from_python.sql
src/: config.rs  db.rs  embedding.rs  envelope.rs  error.rs  lib.rs  main.rs  mcp.rs  retrieval.rs
src/tools/: delete.rs  get.rs  health.rs  list.rs  mod.rs  search.rs  store.rs  update.rs  validate.rs
tests/: contract.rs  integration.rs
(+10 files in other folders)
