[package]
name = "chitta-rs"
version = "0.0.1"
edition = "2024"
description = "Self-hosted agent-native persistent memory and learning system (Rust rewrite)."
license = "MIT OR Apache-2.0"
publish = false

[lib]
name = "chitta_rs"
path = "src/lib.rs"

[[bin]]
name = "chitta-rs"
path = "src/main.rs"

[dependencies]
# Async runtime. De facto standard for Rust network services; needed for stdio I/O + DB pool.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "io-std", "io-util"] }

# Official MCP SDK. Speaks JSON-RPC protocol + stdio transport; we supply handlers.
# `schemars` feature exposes the JsonSchema-backed tool-input schema on the wire.
rmcp = { version = "0.8", features = ["server", "transport-io", "macros", "schemars"] }

# JSON schema generation for rmcp tool arguments (re-exported by rmcp).
schemars = { version = "1", features = ["chrono04"] }

# Postgres driver with runtime-checked queries (see docs/starting-shape.md § sqlx mode).
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }

# pgvector integration for sqlx (encodes/decodes vector(N) as Vec<f32>).
pgvector = { version = "0.4", features = ["sqlx", "serde"] }

# UUID generation. v7 gives time-sortable ids which matter for record_time ordering.
uuid = { version = "1", features = ["v7", "serde"] }

# Timestamps mapped to Postgres timestamptz; serde for wire (de)serialization.
chrono = { version = "0.4", features = ["serde"] }

# Canonical JSON (de)serialization; required by MCP wire format.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ONNX Runtime bindings. `load-dynamic` means we dlopen libonnxruntime.so at startup
# (system package or ORT_DYLIB_PATH); build stays independent of the runtime.
ort = { version = "=2.0.0-rc.10", default-features = false, features = ["load-dynamic", "ndarray"] }

# Numeric arrays for ONNX tensor I/O; matches ort's ndarray feature.
ndarray = "0.16"

# HuggingFace tokenizer. Loads BGE-M3's tokenizer.json (fast-tokenizer format).
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }

# .env loader at startup. No magic, no global mutation; called once from main.
dotenvy = "0.15"

# Structured logging. env-filter lets CHITTA_LOG_LEVEL drive verbosity; json for structured logs.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error types. thiserror for the library ChittaError enum; anyhow for main()'s startup path.
thiserror = "2"
anyhow = "1"

# CLI flag parsing. Needed now for --version; --http stub lands in v0.0.2.
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
# Full tokio for integration tests that spawn the binary and drive stdio.
tokio = { version = "1", features = ["full"] }
# Temp dirs for test isolation.
tempfile = "3"
